// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Toggle Default 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="toggleContainer"
    onClick={[Function]}
  >
    <div
      className="toggleCircle"
    />
  </div>
</div>
`;

exports[`Storyshots Components/Toggle Toggled 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="toggleContainer toggleContainerEnabled"
    onClick={[Function]}
  >
    <div
      className="toggleCircle toggleEnabled"
    />
  </div>
</div>
`;
